--- a/style.css
+++ b/style.css
@@ -1,22 +1,20 @@
-
-
 .header__logo {
     height: 60px;
 }
 
 .header__tabs {
-    color: #07484A;
+    color: black;
     font-family: 'PlayfairDisplay-Regular';
-    font-size: 27px;
+    font-size: 20px;
     display: flex;
     justify-content: center;
     gap: 32px;
 }
 
 .div__tabs:hover {
-    color: #07484A;
+    color: black;
     font-family: 'PlayfairDisplay-Regular';
-    font-size: 27px;
+    font-size: 20px;
     display: flex;
     justify-content: center;
     color: #07484A;
@@ -28,7 +26,7 @@
     align-items: baseline;
 }
 
-.body__inwood  {
+.body__inwood {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -64,7 +62,7 @@
     display: flex;
     justify-content: center;
     color: #FDFBF8;
-    padding: 23.5px 54.5px 23.5px 54.5px ;
+    padding: 23.5px 54.5px 23.5px 54.5px;
     background-color: #70908B;
     border-radius: 10px;
     width: 230px;
